2005-06-04  Philippe Gerum  <rpm@xenomai.org>

	* scripts/rtai-config.in: Provide for --posix-* flags.

	* include/nucleus/fusion.h: Refactor the fusion API namespace, so
	that no conflict/confusion would arise with the incoming POSIX
	support in user-space.

	* skin/posix/lib: Start user-space POSIX support, provided as a
	shadow layer ontop of the native NPTL/LinuxThreads routines.

2005-06-03  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/pod.c (xnpod_start_thread), nucleus/shadow.c
	(xnshadow_start): Improve init code sharing.

	* skins/posix/thread_attr.c: Set default policy to SCHED_FIFO.

2005-06-04  Philippe Gerum  <rpm@xenomai.org>

 	* RELEASE: fusion-0.7.5

2005-05-30  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/lib/task.c (rt_task_shadow): Add a service turning
	the calling Linux task into a native RTAI task.

2005-05-29  Philippe Gerum  <rpm@xenomai.org>

	* arch/ppc/patches: Upgrade to Adeos 2.6.10-ppc-r7c2.

2005-05-29  Dmitry Adamushko  <dmitry.adamushko@datacon.at>

	* nucleus/pipe.c: Rewrite the blocking read implementation from
	the special device side to fix SMP issues.

2005-05-27  Philippe Gerum  <rpm@xenomai.org>

	* arch/ia64, include/nucleus/asm-ia64: Merge the ia64 port, a
	contribution of the HYADES (ITEA) project.

2005-05-26  Philippe Gerum  <rpm@xenomai.org>

	* arch/i386/patches: Upgrade to Adeos 2.6.9,10,11-i386-r10 final.

2005-05-24  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/heap.c (rt_heap_create), skins/rtai/heap.c
	(rt_queue_create): Return -EPERM instead of panicking.

2005-05-23  Dmitry Adamushko  <dmitry.adamushko@datacon.at>

	* nucleus/pipe.c: Fix poll/select support, and prevent duplicate
	open requests on a same device from accidentally trashing the
	state information block of the active connection.

2005-05-22  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* include/nucleus/asm-i386/hal.h (rthal_root_host_task): Use 
	THREAD_SIZE to avoid bug with 4K kernel stacks.
